<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="welcome_message">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Simple Tweets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_created_time">Created Time</string>
    <string name="placeholder_body">Tweet Body</string>
    <string name="placeholder_fullname">Full Name</string>
    <string name="placeholder_username">(@username)</string>
    <string name="placeholder_compose_body">What do you want to say?</string>
    <string name="placeholder_reply_body">Compose a reply</string>
    <string name="placeholder_character_counter">140</string>
    <string name="placeholder_retweet_favorites">440 Retweets \t 400 Favorites</string>
    <string name="placeholder_tagline">This is the user\'s tagline.</string>
    <string name="placeholder_count_tweets">622\nTWEETS</string>
    <string name="placeholder_count_following">131\nFOLLOWING</string>
    <string name="placeholder_count_followers">756\nFOLLOWERS</string>
    <string name="count_tweets">%,d\nTWEETS</string>
    <string name="count_following">%,d\nFOLLOWING</string>
    <string name="count_followers">%,d\nFOLLOWERS</string>
    <string name="image_desc_profile">User profile image</string>
    <string name="image_desc_embedded">Embedded image</string>
    <string name="retweet_favorites"><b>%s</b> Retweets \t <b>%s</b> Favorites</string>
    <string name="generic_error">Something went wrong</string>
    <string name="title_compose">New Tweet</string>
    <string name="title_profile">Profile</string>
    <string name="network_issues">Sorry we\'re having network troubles</string>
    <string name="title_activity_tweet">Tweet</string>
    <string name="button_post">Post</string>
    <string name="post_success">Success!</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
