<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.codepathtwitterclient.activities.ProfileActivity">

    <RelativeLayout
        android:id="@+id/rlUserHeader"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/image_desc_profile"
            android:background="#ff7dd5aa" />

        <TextView
            android:id="@+id/tvFullName"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/placeholder_fullname"
            android:layout_alignTop="@id/ivProfileImage"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_toEndOf="@id/ivProfileImage" />

        <TextView
            android:id="@+id/tvUserName"
            android:textSize="16sp"
            android:textColor="#999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_username"
            android:layout_below="@id/tvFullName"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_toEndOf="@id/ivProfileImage" />

        <TextView
            android:id="@+id/tvTagline"
            android:textSize="16sp"
            android:textColor="#999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_tagline"
            android:layout_below="@id/ivProfileImage" />

        <LinearLayout
            android:layout_below="@id/tvTagline"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCountTweets"
                android:text="@string/placeholder_count_tweets"
                android:padding="4dp"
                android:textSize="18sp"
                android:textColor="#999999"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvCountFollowing"
                android:text="@string/placeholder_count_following"
                android:padding="4dp"
                android:textSize="18sp"
                android:textColor="#999999"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvCountFollowers"
                android:text="@string/placeholder_count_followers"
                android:padding="4dp"
                android:textSize="18sp"
                android:textColor="#999999"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </RelativeLayout>
    <FrameLayout
        android:id="@+id/flUserTimeline"
        android:layout_below="@id/rlUserHeader"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
    </FrameLayout>



</RelativeLayout>
