<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:paddingBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvComposeTitle"
            android:text="@string/title_compose"
            android:textSize="18sp"
            android:layout_toStartOf="@+id/tvCharacterCounter"
            android:layout_toLeftOf="@+id/tvCharacterCounter"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/tvCharacterCounter"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/placeholder_character_counter"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etComposeTweet"
        android:hint="@string/placeholder_compose_body"
        android:lines="3"
        android:textSize="16sp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="72dp" />

</LinearLayout>