<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ff7dd5aa" />

    <TextView
        android:id="@+id/tvFullName"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/placeholder_fullname"
        android:layout_alignTop="@id/ivProfileImage"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_toEndOf="@id/ivProfileImage" />

    <TextView
        android:id="@+id/tvUserName"
        android:textSize="16sp"
        android:textColor="#999999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_username"
        android:layout_alignTop="@id/ivProfileImage"
        android:layout_toRightOf="@id/tvFullName"
        android:layout_toEndOf="@id/tvFullName" />

    <TextView
        android:text="@string/placeholder_body"
        android:textSize="16sp"
        android:id="@+id/tvBody"
        android:autoLink="all"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_toEndOf="@id/ivProfileImage"
        android:layout_below="@id/tvFullName"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCreatedTime"
        android:textSize="12sp"
        android:textColor="#999999"
        android:text="@string/placeholder_created_time"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBody"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage" />

</RelativeLayout>